--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <h1>APPRAISELLS</h1>
   </header>
 
+  <h3>test change</h3>
+
 <h3>FINE ART. PROFESSIONAL APPRAISALS.</h3>
 
  <!-- Pi Network Login Button -->
