--- a/profile.html
+++ b/profile.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>User Profile - Appraisells</title>
   
-  <!-- Configuration -->
-  <script src="script.js"></script>
-  <!-- Pi SDK -->
+  <!-- Pi SDK - Load first -->
   <script src="https://sdk.minepi.com/pi-sdk.js"></script>
+  <!-- Configuration script -->
+  <script src="script.js"></script>
     
   <link rel="stylesheet" href="style.css" />
   
